Fix width issue with header image on mobile

--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -63,7 +63,7 @@
 }
 
 .post__head {
-  width: 900px;
+  max-width: 900px;
   margin: 40px auto 0 auto;
 
   img {
